--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
-# Node modules
+
 node_modules/
 
-# Environment variables
+
 .env
 
-# Logs
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# OS-specific files
+
 .DS_Store
 Thumbs.db
+.env
